[package]
edition = "2018"
name = "dain-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
reqwest = {version = "0.11.3", features = ["blocking"]}
zip = "0.5.13"
