[package]
edition = "2018"
name = "dain-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pretty_env_logger = "0.4.0"
regex = "1.5.4"
reqwest = {version = "0.11.3", features = ["blocking"]}
tokio = {version = "1.6.1", features = ["full"]}
zip = "0.5.13"
# linya = "0.2.0"
progressing = "3.0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0.41"